[package]
name = "block"
version = "0.1.0"
authors = ["m-mueller678"]


[dependencies]
glium = "0.17.0"
piston3d-cam = "0.3.0"
vecmath="0.3.0"
image = "0.15.0"
num = "0.1.40"
time = "0.1.38"
rand = "0.3.16"
noise = "0.4.1"
threadpool = "1.5.0"
chashmap = "2.2.0"
glium_text_rusttype="0.2.0"
font-loader = "0.3.2"
owning_ref = "0.3.3"
slog = "2.0.12"
slog-term = "2.2.0"
lazy_static = "0.2.8"
measure_time = "0.1.5"
