[package]
name = "block"
version = "0.1.0"
authors = ["m-mueller678"]

[dependencies]
glium = "0.20.0"
piston3d-cam = "0.3.0"
vecmath="0.3.1"
image = "0.19.0"
num = "0.1.42"
time = "0.1.39"
rand = "0.4.2"
noise = "0.5.1"
threadpool = "1.7.1"
chashmap = "2.2.0"
glium_text_rusttype="0.3.1"
font-loader = "0.6.0"
owning_ref = "0.3.3"
slog = "2.2.3"
slog-term = "2.4.0"
lazy_static = "1.0.0"
rayon = "1.0.1"